tests/data/placebo/test_security_group_self_reference/ec2.AuthorizeSecurityGroupEgress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "db3edd26-e2e4-461e-91a5-3fe36f11bb5c", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:43:34 GMT"
            }
        }
    }
}
