tests/data/placebo/test_security_group_self_reference/ec2.AuthorizeSecurityGroupIngress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "524712ba-4f3f-4d80-8c78-a33999ca6553", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:43:33 GMT"
            }
        }
    }
}
