tests/data/placebo/test_security_group_self_reference/ec2.AuthorizeSecurityGroupIngress_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "fb010b92-752a-4909-a32b-3c26597d3ae3", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:43:33 GMT"
            }
        }
    }
}
