tests/data/placebo/test_security_group_self_reference/ec2.AuthorizeSecurityGroupIngress_3.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "55ac5759-5642-432a-a1be-a543c9ff7227", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:43:34 GMT"
            }
        }
    }
}
