tests/data/placebo/test_security_group_self_reference/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-269a2f57",
    "ResponseMetadata": {}
  }
}
