tests/data/placebo/test_security_group_self_reference/ec2.CreateSecurityGroup_2.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-03873272",
    "ResponseMetadata": {}
  }
}
