tests/data/placebo/test_security_group_self_reference/ec2.DeleteSecurityGroup_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "cdcc234e-f055-4ec0-8c69-905b28ee1df1", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Fri, 16 Dec 2016 15:13:01 GMT"
            }
        }
    }
}
